changed css html file

--- a/css.html
+++ b/css.html
@@ -25,6 +25,7 @@ PC                      - 1280px
 
     <div id="my-id">
         <h2>this is my id</h2>
+        <h1>this is git status check</h1>
     </div>
     <br>
     <p>https://colorhunt.co/https://colorhunt.co/</p>
