--- a/css.html
+++ b/css.html
@@ -34,14 +34,13 @@ PC                      - 1280px
         <h1>This is inline css done in the above line. this should be avoided at any cost</h1>
     </div>
     <br>
-    <div class="parent">
-        <div class="child"></div>
-        <div class="child"></div>
-        <div class="child"></div>
-        <div class="child"></div>
+    <div class="container">
+
+        <p>Container paragraph</p>
+    </div>
+    <div class="box">
 
     </div>
-
 
 </body>
 
